editors/zed/tree-sitter-cpu/grammar.js
    source_file: $ => repeat(choice(
      $.cpu_declaration, $.device_declaration, $.device_interface, $.state_declaration, $._state_field,
      $.source_declaration, $.action_declaration, $.policy_declaration,
      $.operands_declaration, $.codes_declaration, $.conditions_declaration,
      $.family_declaration, $.page_declaration, $.execution_declaration, $.reset_declaration, $.interface_declaration,
    )),

    cpu_declaration: $ => seq('cpu', field('model', $.string), optional(seq('boundary', choice('segmented', 'word')))),
    state_declaration: $ => seq('state', '{', repeat(choice($._state_field, $.bank_declaration, $.group_declaration)), '}'),
    _state_field: $ => choice($.register_declaration, $.array_declaration, $.flag_declaration, $.choice_declaration),
    register_declaration: $ => seq('register', $._state_name, ':', $.number, optional($.field_mapping)),
    array_declaration: $ => seq('array', $._state_name, ':', $.number, '[', $.number, ']', optional($.field_mapping)),
    flag_declaration: $ => seq(choice('flag', 'latch'), $._state_name, optional($.field_mapping)),
    field_mapping: $ => seq('=', $.identifier),

    source_declaration: $ => seq(choice('source', 'view'), field('name', $.identifier), optional($.width_parameter), $.string, optional($.parameters), ':', $._value_type, $.body),
    action_declaration: $ => seq('action', field('name', $.identifier), $.string, optional($.parameters), optional(seq('using', commaSeparated(choice('memory', 'boundary', 'staging', 'alignment')))), $.body),
    _value_type: $ => choice($.number, alias($.identifier, $.type_identifier), 'flag'),
    family_declaration: $ => seq('family', field('name', $.identifier), optional($.parameters), choice(
      seq($._encoding, $.body),
      seq('{', repeat1($.encoding_declaration), repeat($._statement), '}'),
    )),
    encoding_declaration: $ => seq('encoding', $._encoding),
    _encoding: $ => seq(field('pattern', $.string),
      optional(seq('on', $.identifier)),
      optional(seq('for', commaSeparated($.selector))),
      optional(seq('with', commaSeparated($.source_binding))),
      optional(seq('named', $.string)),
      optional(seq('except', commaSeparated($.string))),
    ),
    selector: $ => seq($.identifier, 'in', $.identifier, optional(seq('.', field('view', $.identifier)))),
    source_binding: $ => seq($.identifier, '=', choice(seq($.identifier, optional($.width_argument)), seq('register', $._state_name))),

    body: $ => seq('{', repeat($._statement), '}'),
    _statement: $ => choice(
      $.choose_capture, $.match_capture, $.match_statement, $.capture, $.write, $.apply_statement, $.exchange_statement, $.perform_statement, $.when_statement,
      $.iterate_capture, $.iterate_statement, $.divide_capture, $.reject_statement, $.return_statement, $.fault_statement, $.commit_statement, $.defer_statement, $.notify_statement, $.report_statement, $.escape_statement, $.target_statement, $.reset_statement, $.stage_statement,
    ),
    capture: $ => seq(field('name', $._local_name), choice(
      seq(':', $._value_type, '=', $._expression), seq('=', choice($._read, $._expression)))),
    _read: $ => choice(
      seq('fetch', optional('word')), seq('next', 'address'), $.pending_read, seq('program', 'memory', $.arguments), seq('sample', 'test'), $.choice_read, $.state_read, $.array_read, $.source_read, $.operand_read,
    ),
    state_read: $ => seq(choice('register', 'flag', 'latch'), $._state_name),
    array_read: $ => seq('array', $._state_name, '[', $._expression, ']'),
    source_read: $ => seq('source', field('name', $.identifier), optional($.width_argument), optional($.arguments)),
    operand_read: $ => seq('operand', $.identifier),
    write: $ => seq(choice($._state_name, $.array_target, $.operand_target, $.memory_target), '<-', choice($._expression, $.string)),
    array_target: $ => seq($._state_name, '[', optional($._expression), ']'),
    memory_target: $ => seq(choice('memory', 'port'), '(', $._expression, ')'),
    exchange_statement: $ => seq('exchange', $._state_name, ',', $._state_name),
    when_statement: $ => seq('when', choice(seq('test', $.identifier), $._expression), $.body),
    return_statement: $ => seq('return', $._expression),
    fault_statement: $ => seq('fault', 'alignment', optional('program'), choice('read', 'write', 'fetch'),
      '(', $._expression, ')', 'if', $._expression),
    commit_statement: _ => seq('commit', 'addresses'),
    _local_name: $ => choice($.identifier, ...['exchange', 'port', 'next', 'reset', 'select', 'target', 'stage', 'pending', 'staging', 'notify', 'report', 'send'].map(word => alias(word, $.identifier))),
    _expression: $ => choice($._local_name, $.number, $.call),
    call: $ => seq(field('function', $._local_name), optional($.width_argument), $.arguments),
    arguments: $ => seq('(', optional(commaSeparated($._expression)), ')'),

    execution_declaration: $ => seq('execution', optional(choice('segmented', 'word')), '{', repeat(choice(
      $.word_execution_policy, $.word_events, $.memory_policy, $.counter_policy, $.stopped_policy, $.word_policy,
      $.segmentation_policy, $.prefix_policy, $.waiting_policy, $.pending_policy, $.fault_delivery_policy, $.unsupported_policy,
      $.opcode_policy, $.operand_policy, $.failure_policy, $.action_policy, $.retirement_policy, $.notification_policy, $.interrupt_policy,
    )), '}'),
    memory_policy: $ => seq('memory', $.number),
    counter_policy: $ => seq('counter', $._state_name, optional(seq('write', $.identifier))),
    stopped_policy: $ => seq('stopped', choice('none', seq(choice($._state_name,
      seq('choice', $._state_name, 'unless', $.string)), optional(seq('as', 'waiting'))))),
    word_policy: _ => seq('word', choice('little', 'big')),
    opcode_policy: $ => seq('opcode', 'advance', 'on', choice('dispatch', 'read', seq('decode', 'with', 'action', $.identifier))),
    operand_policy: _ => seq('operand', 'advance', 'after', 'read'),
    failure_policy: _ => seq('failure', 'retain'),
    action_policy: $ => seq(choice('reset', 'retire'), choice('none', seq('action', $.identifier, optional(seq('sampling', commaSeparated(seq(choice('flag', 'latch'), $._state_name))))))),
    interrupt_policy: $ => seq('interrupt', choice('external', 'events', seq('offers', '{', repeat($.vector_offer), '}'), seq('entries', '{', repeat($.interrupt_entry), '}'), seq(optional('vectors'), '{', repeat(choice(
      $.vector_entry,
      $.accept_policy, $.bytes_policy, $.callback_policy, $.interrupt_counter_policy, $.unknown_policy,
    )), '}'))),
    accept_policy: $ => seq('accept', choice('always',
      seq('when', $._state_name, optional(seq('unless', $._state_name)))), 'with', $.identifier),
    bytes_policy: _ => seq('bytes', 'acknowledge'),
    interrupt_counter_policy: _ => seq('counter', choice('preserve', 'advance')),
    unknown_policy: _ => seq('unknown', 'retain'),
    interface_declaration: $ => seq('interface', field('name', $.identifier), $.string,
      '{', repeat(choice($.snapshot_declaration, $.bank_alias)), '}'),
    snapshot_declaration: $ => seq('snapshot', $.identifier, optional(seq('.', $.identifier)), '=', $._state_name),

    _state_name: $ => seq(alias($.identifier, $.state_identifier), optional(seq('.', alias($.identifier, $.state_identifier)))),
    identifier: _ => /[A-Za-z][A-Za-z0-9_]*/,
    number: _ => token(choice(/[0-9]+/, /\$[0-9a-fA-F]+/)),
    string: $ => seq('"', repeat(choice($.string_content, $.escape_sequence)), '"'),
    // Keep // inside a string from winning over its next content segment.
    string_content: _ => token.immediate(prec(1, /[^"\\\r\n]+/)),
    escape_sequence: _ => token.immediate(seq('\\', choice(/["\\/bfnrt]/, /u[0-9a-fA-F]{4}/))),
    comment: _ => token(seq('//', /[^\r\n]*/)),
  },
});
